2008-05-01  Jens Granseuer  <jensgr@gmx.net>

	* appearance-themes.c: (themes_init): update for changes in the
	theme-info API

2008-04-20  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (update_thumbnail_in_treeview):
	* appearance-themes.c: (theme_thumbnail_update),
	(theme_thumbnail_generate): adapt to modified refcounting in the
	thumbnailer; thumbnails don't need to be unref'ed unless we explicitly
	retain a reference

2008-04-19  Jens Granseuer  <jensgr@gmx.net>

	* Makefile.am:
	* appearance-themes.c: (theme_validate),
	(theme_message_area_update), (themes_init):
	* appearance.h: show a warning message when the selected theme is
	incomplete (e.g. missing icon theme or gtk theme engine)

2008-04-17  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Lincoln de Sousa <lincoln@minaslivre.org>

	* gnome-wp-xml.c (gnome_wp_file_changed), (gnome_wp_xml_add_monitor),
	(gnome_wp_xml_load_from_dir), (gnome_wp_xml_load_list): replace gnome-vfs by
	gio (part of bug #524401)

2008-04-14  Thomas Wood  <thos@gnome.org>

	* Makefile.am:
	* appearance-themes.c: (themes_init):
	* caption-cellrenderer.c:
	* caption-cellrenderer.h:

	Add a custom cell renderer for metatheme names to allow rounded corners
	on the selection indicator. Fixes bug 500276.

2008-04-13  Jens Granseuer  <jensgr@gmx.net>

	* appearance-desktop.c: (wp_option_menu_set),
	(wp_scale_type_changed), (wp_shade_type_changed),
	(wp_options_changed), (wp_shading_changed), (wp_props_wp_set),
	(wp_load_stuffs):
	* data/appearance.glade:
	* gnome-wp-item.c: (wp_item_option_to_string),
	(wp_item_shading_to_string), (wp_item_string_to_option),
	(wp_item_string_to_shading), (set_bg_properties),
	(gnome_wp_item_update), (gnome_wp_item_free):
	* gnome-wp-item.h:
	* gnome-wp-xml.c: (gnome_wp_xml_load_xml),
	(gnome_wp_xml_save_list): use the GnomeBG enum types instead of
	strings to handle options internally and only convert when needed

2008-04-08  Jens Granseuer  <jensgr@gmx.net>
