@@ -1,5 +1,12 @@
 2008-05-01  Jens Granseuer  <jensgr@gmx.net>
 
+	Based on a patch by: Lincoln de Sousa <lincoln@minaslivre.org>
+
+	* appearance-desktop.c: (wp_drag_received), (wp_update_preview): more
+	gio conversion (part of bug #524401)
+
+2008-05-01  Jens Granseuer  <jensgr@gmx.net>
+
 	* appearance-themes.c: (themes_init): update for changes in the
 	theme-info API
 
